--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "@shopify/slate-config": "1.0.0-beta.14",
-    "loader-utils": "^1.1.0"
+    "loader-utils": "^1.1.0",
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "css-loader": "^0.28.8",
